[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://assets/hitman1_gun.png" type="Texture" id=2]
[ext_resource path="res://assets/Audio/Walk.wav" type="AudioStream" id=3]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://Team.tscn" type="PackedScene" id=5]
[ext_resource path="res://actors/WeaponManager.gd" type="Script" id=6]
[ext_resource path="res://Weapons/Uzi.tscn" type="PackedScene" id=7]
[ext_resource path="res://Dash.tscn" type="PackedScene" id=8]
[ext_resource path="res://whiten_material.tres" type="Material" id=9]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 140.158, 118.915 )

[node name="Player" type="KinematicBody2D" groups=["obstacles", "player"]]
position = Vector2( 72, 72 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 9 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 9, 0, 29, 43 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, 0 )
shape = SubResource( 4 )

[node name="Health" parent="." instance=ExtResource( 4 )]

[node name="Team" parent="." instance=ExtResource( 5 )]

[node name="CameraTransform" type="RemoteTransform2D" parent="."]

[node name="LightTransform" type="RemoteTransform2D" parent="."]

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( 16.4497, 12.9464 )
script = ExtResource( 6 )

[node name="Uzi" parent="WeaponManager" instance=ExtResource( 7 )]
max_ammo = 40

[node name="Walk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -8.0

[node name="Dash" parent="." instance=ExtResource( 8 )]

[node name="DustTrail" parent="Dash" index="2"]
position = Vector2( -16, 0 )

[node name="DashHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashHurtbox"]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.2308, 0.86396 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.8

[connection signal="body_entered" from="DashHurtbox" to="." method="_on_DashHurtbox_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Dash"]
